# stdash

./: .pyproject.toml.swp  Dockerfile  README.md  pyproject.toml  requirements.txt
note/: test.ipynb  user.ipynb
src/stdash/: .app.py.swp  app.py
src/stdash/pages/: 1_Request_And_Prediction_time.py  2_Request_And_Prediction_User.py  4_Hotdog_Or_Not.py  step1.py  step2.py  step3.py  step4.py
